# MLScript

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.md  MLScript.g4  PROGRESS.md  README.md  build.sh  test_runner.sh
examples/data/: data.csv  data.json  data1.csv  data_with_nulls.csv
examples/loading_data/: load_csv_chosen_cols.mls  load_csv_discard_cols.mls
examples/preproces/: preproces.mls
examples/showing_data/: show_features.mls  show_features_count.mls  show_multiple_rows.mls  show_rows_count.mls  show_single_row.mls
examples/target_split/: set_target_and_split.mls
mlscript_runtime/error_handling/: safe_execute_load.py  safe_execute_show.py
src/: CustomErrorListener.h  GeneratorConfig.h  Logger.h  PythonGenerator.cpp  PythonGenerator.h  main.cpp
src/generators/: GenConditional.cpp  GenCreateModel.cpp  GenDisplay.cpp  GenExportModel.cpp  GenLoad.cpp  GenPredict.cpp  GenPreproces.cpp  GenTrain.cpp  GenTrainPrep.cpp
src/semantics/: SymbolTable.cpp  SymbolTable.h  VariableType.h
src/utils/: ModelParamParseUtil.h
tests/expected/: load_csv_choose_columns.py  load_csv_discard_columns.py  load_full_csv.py  show_agg_func.py  show_agg_mean.py  show_multiple_cols_with_name.py  show_multiple_cols_with_range.py  show_one_col_with_index.py  show_one_col_with_name.py  show_whole_dataset.py
tests/source/: load_full_csv.mls  show_agg_func.mls  show_agg_mean.mls  show_multiple_cols_with_name.mls  show_multiple_cols_with_range.mls  show_one_col_with_index.mls  show_whole_dataset.mls
vscode-extension/: README.md  package.json  snippets.json
(+101 files in other folders)
